--- a/templates/mysql-deployment.yaml
+++ b/templates/mysql-deployment.yaml
@@ -51,7 +51,7 @@ metadata:
 spec:
   storageClassName: manual
   capacity:
-    storage: 1Gi
+    storage: {{ .Values.storage }}
   accessModes:
     - ReadWriteOnce
   hostPath:
@@ -67,4 +67,4 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: {{ .Values.storage }}
